Bug 481061 - Display identification not possible
Summary: Display identification not possible
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: usability
: 484621 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-08 15:52 UTC by Benjamin Flesch
Modified: 2025-01-13 17:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
cannot identify monitor with these labels (314.29 KB, image/png)
2024-02-08 15:52 UTC, Benjamin Flesch
Details
Screenshot of cut indetification string (151.13 KB, image/png)
2024-04-07 11:12 UTC, Tia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Flesch 2024-02-08 15:52:26 UTC
Created attachment 165670 [details]
cannot identify monitor with these labels

SUMMARY
***
When using the "display configuration" settings with 3 screen, the identification of individual monitors is not possible, because the monitor names shown on each monitor and in the "display configuration" interface are actually different!

please see screenshot
***


STEPS TO REPRODUCE
1. 3 monitors, one via native hdmi, two via usb-c dvi, all same model
2. right click desktop -> manage displays
3. click "identify button"

OBSERVED RESULT
same label on all screens with small addition which is not reflected in the main window

EXPECTED RESULT
Actual numbers 1, 2, 3

5.93 6RC3 on wayland

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 fanzhuyifan 2024-02-08 18:10:44 UTC
Maybe for display identification purposes, we should just put big 1, 2, 3 numbers on all the screens
Comment 2 Benjamin Flesch 2024-02-08 20:53:26 UTC
Yes, numbers is definitely better than printing a *different* string in the monitor label than it is shown in the settings. I dont know why we need to reinvent the wheel here, display sorting is a solved problem, why try to do it so complex?
Comment 3 fanzhuyifan 2024-02-08 20:54:36 UTC
(In reply to Benjamin Flesch from comment #2)
> Yes, numbers is definitely better than printing a *different* string in the
> monitor label than it is shown in the settings. I dont know why we need to
> reinvent the wheel here, display sorting is a solved problem, why try to do
> it so complex?

Would you like to submit a MR? Note that this is a new feature, and would thus target 6.1
Comment 4 Benjamin Flesch 2024-02-10 12:34:51 UTC
PR for kwin: https://invent.kde.org/plasma/kwin/-/merge_requests/5165
Comment 5 Benjamin Flesch 2024-02-10 12:47:32 UTC
PR for kscreen: https://invent.kde.org/plasma/kscreen/-/merge_requests/284
Comment 6 Tia 2024-04-07 11:12:07 UTC
Created attachment 168245 [details]
Screenshot of cut indetification string

Having similar issue with vertical monitor, where identification string is not being broken in two lines, making parts unreadable.

As stated using simple numbering system would be simple solution.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 6.0
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Comment 7 t.baag 2024-04-16 19:30:39 UTC
*** Bug 484621 has been marked as a duplicate of this bug. ***
Comment 8 David Edmundson 2025-01-13 17:18:45 UTC
This exists in Plasma 6.2 on Wayland