kcm: Add visual display number badge next to monitor names

This commit introduces a compact visual badge shown consistently next
to every monitor name.

The previous custom implementation (Rectangle + QQC2.Label) has been
replaced with the new `Kirigami.Badge` component. This significantly
reduces code duplication, improves maintainability, and makes the
style consistent with the rest of KDE/Plasma.

The badge now appears in the following places:

* Navigation tabs
* Priority reorder dialog
* "Replica of:" combobox items

Display numbers are calculated based on sorted connector names
(case-insensitive), starting from 1, and given a unique color.

This change significantly improves quick visual identification of
displays, especially in multi-monitor setups with identical or
similar-looking panels.

BUG: 481061
CCBUG: 466046
CCBUG: 450344
FIXED-IN: 6.8